# discrete-world

./: LICENSE  README.md  requirements.txt  setup.cfg
discrete_world/: __init__.py  __main__.py  agent.py  design_obstacles.py  grid.py  plotting.py  test.py
envs/: env1.env  env2.env  env_slip  fl4_det.env  fl4_prob.env
src/: agent.py  create_demos.py  design_obstacles.py  grid.py  main.py  plotting.py
